css/movies.css
/* Now Playing Movies */

.movies,
.comingSoon {
  display: flex;
  flex-wrap: wrap;
  z-index: 1;
}

.seperator h2 {
  font-size: 4vh;
  margin: 0;
}

.movieCard {
  background-color: white;
  display: flex;
  flex-direction: column;
  min-width: 325px;
  width: 25%;
  margin: 5vh;
  border: solid 1px white;
}

.poster {
  object-fit: cover;
  max-height: 285px;
  width: 100%;
  height: 40%;
  opacity: 0.8;
}

.movieText {
  color: black;
  text-align: center;
}


.movieText ul { /* Not sure what is controlling the padding on the ul--extra 40px left */
  padding: 0;
  list-style: none;
}

.synopsis {
  padding-top: 1vh;
 
}

.genre {
  font-style: italic;
}

/* Dropdown Menu */

.purchase { 
  position: relative;
  padding-top: 5vh;
}

.dropbtn {
  background-color: #9B30FF;
  color: white;
  min-width: 160px;
  padding: 16px;
  font-size: 16px;
  border: none;
  cursor: pointer;
  
}

.dropdown {
  position: relative;
  display: inline-block;
}

.dropdown-content {
  display: none;
  position: absolute;
  background-color: #f9f9f9;
  min-width: 160px;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  z-index: 5;
}

.dropdown-content a {
  color: black;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
  z-index: 5;
}

.dropdown-content a:hover {
  background-color: #f1f1f1
}

.dropdown:hover .dropdown-content {
  display: block;
}

.dropdown:hover .dropbtn {
  background-color: #ff4500;
}

/* Coming Soon Area */

.comingSoon .poster {
  filter: grayscale(100%);
}

/* ------------------------------------------ */

/* Mobile Media Queries */

@media screen and (max-width: 900px) {
  .movies,
  .comingSoon {
    display: flex;
    flex-direction: column;
  }

  .movieCard {
    padding: 0;
    margin: 0;
    width: 100%;
  }

  .movieCard img {
    width: 100%;
    margin: auto;
  }

  .movieText {
    width: 100%;
  }
}

